tests/golden/type_errors/array_map_member_arity.err
Type error at 1:9: expected 1 arguments but got 0
  [1].map();
          ^
